--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trip Swift</title>
+    <link rel="shortcut icon" href="Images/icon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    
+    <header>
+        <!-- head section -->
+
+        <nav>
+            <div class="nav-heading">
+                <div class="img-nav">
+                    <div class="img-icon">
+                        <img src="Images/Group 40071 (2).png" alt="Image loading" />
+                    </div>
+
+                    <div class="heading">
+                        <h4>Trip <span style="color: #ff5400">Swift</span></h4>
+                    </div>
+                </div>
+
+                <div class="nav-options">
+                    <ul class="options">
+                        <li style="color: #ff5400">Home</li>
+                        <li>Packages</li>
+                        <li>Testimonial</li>
+                        <li>Blog</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="head-text-container">
+            <div class="shadow">
+
+                <div class="head-text">
+                    <h4>Explore Your Travel</h4>
+                </div>
+
+                <div class="head-description">
+                    <p>Discover endless possibilities with ExploreYourTravel. Navigate our user-friendly platform, book
+                        seamlessly, and embark
+                        on unforgettable journeys. Your adventure starts here!</p>
+                </div>
+
+                <div class="buttons-container">
+                    <div>
+                        <button class="button-1">Where go</button>
+                    </div>
+                    <div>
+                        <button class="button-2">When <img src="Images/Frame (1).svg" alt=""></button>
+
+                    </div>
+                    <div>
+                        <button class="button-3">Select Type <img src="Images/Frame (1).svg" alt=""></button>
+
+                    </div>
+                    <div class="find">
+                        <button class="find-button-4"><img src="Images/Frame (2).svg" alt=""> Find Now</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </header>
+
+    <main>
+
+        <!-- Page - 02 -->
+
+        <section class="page-02">
+
+
+        </section>
+
+
+    </main>
+
+    <footer></footer>
 </body>
+
 </html>
