another two section done

--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
 
         <div class="head-text-container">
             <div class="shadow">
-
                 <div class="head-text">
                     <h4>Explore Your Travel</h4>
                 </div>
 
                 <div class="head-description">
-                    <p>Discover endless possibilities with ExploreYourTravel. Navigate our user-friendly platform, book
-                        seamlessly, and embark
-                        on unforgettable journeys. Your adventure starts here!</p>
+                    <p>
+                        Discover endless possibilities with ExploreYourTravel. Navigate
+                        our user-friendly platform, book seamlessly, and embark on
+                        unforgettable journeys. Your adventure starts here!
+                    </p>
                 </div>
 
                 <div class="buttons-container">
@@ -55,33 +56,110 @@
                         <button class="button-1">Where go</button>
                     </div>
                     <div>
-                        <button class="button-2">When <img src="Images/Frame (1).svg" alt=""></button>
-
+                        <button class="button-2">
+                            When <img src="Images/Frame (1).svg" alt="" />
+                        </button>
                     </div>
                     <div>
-                        <button class="button-3">Select Type <img src="Images/Frame (1).svg" alt=""></button>
-
+                        <button class="button-3">
+                            Select Type <img src="Images/Frame (1).svg" alt="" />
+                        </button>
                     </div>
                     <div class="find">
-                        <button class="find-button-4"><img src="Images/Frame (2).svg" alt=""> Find Now</button>
+                        <button class="find-button-4">
+                            <img src="Images/Frame (2).svg" alt="" /> Find Now
+                        </button>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </header>
 
     <main>
-
         <!-- Page - 02 -->
 
         <section class="page-02">
+            <div class="tours-container">
+                <h4>Our Popular Tours</h4>
+                <p>
+                    Embark on unforgettable journeys with our popular tours, exploring
+                    breathtaking landscapes, immersive cultures, and creating cherished
+                    memories that last a lifetime.
+                </p>
+                <ul>
+                    <li>
+                        Diverse Destinations: Explore a world of wonders, from sun-kissed
+                        beaches to vibrant cities, each tour promises diversity.
+                    </li>
+                    <li>
+                        Cultural Immersion: Immerse yourself in rich traditions, savor
+                        local flavors, and connect with communities for authentic cultural
+                        experiences.
+                    </li>
+                    <li>
+                        Memorable Moments: Our tours are crafted to create lasting
+                        memories, ensuring every moment is filled with joy and discovery.
+                    </li>
+                </ul>
+                <p>
+                    Discover diverse destinations, immerse in rich cultures, and create
+                    unforgettable memories with our popular tours, promising
+                    extraordinary experiences in every moment of your journey.
+                </p>
+
+                <button class="btn-primary">Read More</button>
+            </div>
+
+            <div class="tour-img">
+                <img src="Images/Rectangle 4.png" alt="" />
+            </div>
+        </section>
+
+        <!-- Page - 03 -->
+
+        <section class="page-03">
+
+            <div class="title-description">
+
+                <h3>Choose Your Destination</h3>
+                <p>Choose your destination for an adventure of a lifetime, where every tour unveils unique wonders and
+                    unforgettable
+                    experiences.</p>
+            </div>
+
+            <div class="img-container-01">
+                <div class="img-01">
+                    <h4 class="one">Maldives</h4>
+                </div>
+
+                <div class="img-02">
+                    <h4>Indonesia</h4>
+                </div>
+            </div>
+
+            <div class="img-container-02">
+                <div class="img-03">
+                    <h4>Srilanka</h4>
+                </div>
+                <div class="img-04">
+                    <h4>North America</h4>
+                </div>
+                <div class="img-05">
+                    <h4>Kashmir</h4>
+                </div>
+            </div>
+
+            <div class="img-container-03">
+                <div class="img-06">
+                    <h4>Bangladesh</h4>
+                </div>
+                <div class="img-07">
+                    <h4>Bandarban</h4>
+                </div>
+            </div>
 
 
         </section>
-
-
     </main>
 
     <footer></footer>
