footer section done

--- a/index.html
+++ b/index.html
@@ -118,13 +118,12 @@
         <!-- Page - 03 -->
 
         <section class="page-03">
-
             <div class="title-description">
-
                 <h3>Choose Your Destination</h3>
-                <p>Choose your destination for an adventure of a lifetime, where every tour unveils unique wonders and
-                    unforgettable
-                    experiences.</p>
+                <p>
+                    Choose your destination for an adventure of a lifetime, where every
+                    tour unveils unique wonders and unforgettable experiences.
+                </p>
             </div>
 
             <div class="img-container-01">
@@ -157,12 +156,103 @@
                     <h4>Bandarban</h4>
                 </div>
             </div>
+        </section>
 
+        <!-- Page - 04 -->
+
+        <section class="choose-section">
+
+            <div class="choose-container">
+                <h3>Why Choose Us</h3>
+                <p>Choose us for unrivaled tours: expertly curated itineraries, seamless experiences, and a commitment
+                    to creating
+                    unforgettable travel memories.</p>
+            </div>
+
+            <div class="service-container">
+                <div class="handpick-hotel">
+                    <img src="Images/hotel 1.svg" alt="">
+                    <h4>Handpicked Hotels</h4>
+                    <p>Explore handpicked hotels on your journey, curated for comfort and elegance, ensuring a luxurious
+                        and memorable stay
+                        throughout your tour.</p>
+                </div>
+
+                <div class="world-class-hotels">
+                    <img src="Images/map 1.svg" alt="">
+                    <h4>World Class Service</h4>
+                    <p>Experience world-class service on our tours, where hospitality meets excellence, ensuring your
+                        journey is seamless,
+                        memorable, and extraordinary at every turn.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="newsletter">
+
+            <div class="signup-form">
+
+                <h4>Newsletter</h4>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr class="line">
+                <input class="text" type="text" placeholder="Enter your name" required>
+                <input class="email" type="email" placeholder="Enter your email" required>
+                <input class="btn-new" type="button" value="Subscribe">
+
+            </div>
+
+            <div class="newsletter-right">
+                <div class="img-offer">
+                    <img src="Images/Rectangle 8 (1).png" alt="">
+                </div>
+
+                <div class="text-newsletter">
+                    <p>Travel.com</p>
+                    <h4>Save up to 70%</h4>
+                </div>
+
+            </div>
 
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+
+        <div class="footer-container">
+
+            <div class="img-foot">
+
+                <div class="img-icon">
+                    <img src="Images/Group 40071 (2).png" alt="Image loading" />
+                </div>
+
+                <div class="footer-heading">
+                    <h4>Trip <span style="color: #ff5400">Swift</span></h4>
+                </div>
+
+            </div>
+
+            <div class="footer-description">
+                <p>Explore the world with us. Unforgettable journeys, expert guidance, and seamless experiences—your
+                    passport to
+                    adventure
+                    awaits. Bon voyage!</p>
+            </div>
+
+            <div class="footer-icon">
+                <img src="Images/Social.svg" alt="">
+            </div>
+
+            <hr class="line-02">
+
+            <div class="copyright">
+                <p>&copy; 2017, All Rights Reserved.</p>
+            </div>
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
