main number section done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <!-- head section -->
+
+        <!-- Head Page - 01-->
 
         <nav>
             <div class="nav-heading">
@@ -161,68 +162,80 @@
         <!-- Page - 04 -->
 
         <section class="choose-section">
-
             <div class="choose-container">
                 <h3>Why Choose Us</h3>
-                <p>Choose us for unrivaled tours: expertly curated itineraries, seamless experiences, and a commitment
-                    to creating
-                    unforgettable travel memories.</p>
+                <p>
+                    Choose us for unrivaled tours: expertly curated itineraries,
+                    seamless experiences, and a commitment to creating unforgettable
+                    travel memories.
+                </p>
             </div>
 
             <div class="service-container">
                 <div class="handpick-hotel">
-                    <img src="Images/hotel 1.svg" alt="">
-                    <h4>Handpicked Hotels</h4>
-                    <p>Explore handpicked hotels on your journey, curated for comfort and elegance, ensuring a luxurious
-                        and memorable stay
-                        throughout your tour.</p>
+                    <img src="Images/hotel 1.svg" alt="" />
+                    <h3>Handpicked Hotels</h3>
+                    <p>
+                        Explore handpicked hotels on your journey, curated for comfort and
+                        elegance, ensuring a luxurious and memorable stay throughout your
+                        tour.
+                    </p>
                 </div>
 
                 <div class="world-class-hotels">
-                    <img src="Images/map 1.svg" alt="">
-                    <h4>World Class Service</h4>
-                    <p>Experience world-class service on our tours, where hospitality meets excellence, ensuring your
-                        journey is seamless,
-                        memorable, and extraordinary at every turn.</p>
+                    <img src="Images/map 1.svg" alt="" />
+                    <h3>World Class Service</h3>
+                    <p>
+                        Experience world-class service on our tours, where hospitality
+                        meets excellence, ensuring your journey is seamless, memorable,
+                        and extraordinary at every turn.
+                    </p>
+                </div>
+            </div>
+
+            <div class="price-container">
+                <div class="best-price">
+                    <img src="Images/price-tag 1.svg" alt="" />
+                    <h3>Best Price Guarantee</h3>
+                    <p>
+                        Discover unbeatable prices for extraordinary adventures. Our commitment to affordability ensures
+                        you
+                        experience the best
+                        journeys without breaking the bank.
+                    </p>
                 </div>
             </div>
 
         </section>
 
         <section class="newsletter">
-
             <div class="signup-form">
-
                 <h4>Newsletter</h4>
                 <p>Get your daily dose of travel news & tips. Sign up today!</p>
-                <hr class="line">
-                <input class="text" type="text" placeholder="Enter your name" required>
-                <input class="email" type="email" placeholder="Enter your email" required>
-                <input class="btn-new" type="button" value="Subscribe">
-
+                <hr class="line" />
+                <input class="text" type="text" placeholder="Enter your name" required />
+                <input class="email" type="email" placeholder="Enter your email" required />
+                <input class="btn-new" type="button" value="Subscribe" />
             </div>
 
             <div class="newsletter-right">
                 <div class="img-offer">
-                    <img src="Images/Rectangle 8 (1).png" alt="">
+                    <img src="Images/Rectangle 8 (1).png" alt="" />
                 </div>
 
                 <div class="text-newsletter">
                     <p>Travel.com</p>
                     <h4>Save up to 70%</h4>
                 </div>
-
             </div>
-
         </section>
     </main>
 
+    <!-- Footer Page - 08 -->
+
     <footer class="footer">
-
         <div class="footer-container">
-
             <div class="img-foot">
-
                 <div class="img-icon">
                     <img src="Images/Group 40071 (2).png" alt="Image loading" />
                 </div>
@@ -230,28 +243,26 @@
                 <div class="footer-heading">
                     <h4>Trip <span style="color: #ff5400">Swift</span></h4>
                 </div>
-
             </div>
 
             <div class="footer-description">
-                <p>Explore the world with us. Unforgettable journeys, expert guidance, and seamless experiences—your
-                    passport to
-                    adventure
-                    awaits. Bon voyage!</p>
+                <p>
+                    Explore the world with us. Unforgettable journeys, expert guidance,
+                    and seamless experiences—your passport to adventure awaits. Bon
+                    voyage!
+                </p>
             </div>
 
             <div class="footer-icon">
-                <img src="Images/Social.svg" alt="">
+                <img src="Images/Social.svg" alt="" />
             </div>
 
-            <hr class="line-02">
+            <hr class="line-02" />
 
             <div class="copyright">
                 <p>&copy; 2017, All Rights Reserved.</p>
             </div>
-
         </div>
-
     </footer>
 </body>
 
